--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -9,6 +8,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        // Enabling multiDex support.
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -27,6 +28,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:15.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.google.firebase:firebase-firestore:16.0.0'  //import CloudStore
+    implementation 'com.android.support:multidex:1.0.3' // to resolve "Cannot fit requested classes in a single dex file. Try supplying a main-dex list."
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
