--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,15 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "tw.com.team13.firebaselogin"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         // Enabling multiDex support.
         multiDexEnabled true
+
+        vectorDrawables.useSupportLibrary true
     }
     buildTypes {
         release {
@@ -27,6 +29,17 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.google.firebase:firebase-auth:15.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
+
+    // Android architecture components
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+
+    implementation 'com.jakewharton:butterknife:8.8.1' //butter knife
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1' // butter knife
+    implementation 'com.github.bumptech.glide:glide:3.7.0' //import glide
+    implementation 'me.zhanghai.android.materialratingbar:library:1.3.1' //import Rating Bar
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'  // FirebaseUI (for authentication)
     implementation 'com.google.firebase:firebase-storage:15.0.2'  //import FireStore
     implementation 'com.google.firebase:firebase-firestore:16.0.0'  //import CloudStore
     implementation 'com.android.support:multidex:1.0.3' // to resolve "Cannot fit requested classes in a single dex file. Try supplying a main-dex list."
