--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
@@ -26,11 +28,10 @@
             android:label="@string/app_name" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".addStoreActivity" />
-        <activity android:name=".MainActivity2">
-        </activity>
+        <activity android:name=".MainActivity2" />
         <activity android:name=".RestaurantDetailActivity"/>
         <activity android:name=".SearchActivity" />
+        <activity android:name=".addRestaurantActivity" />
     </application>
 
 </manifest>
