--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
         <activity android:name=".RegisterActivity" />
+
         <activity android:name=".LoginActivity" />
+
         <activity android:name=".MainActivity2" />
+
         <activity android:name=".RestaurantDetailActivity"/>
+
         <activity android:name=".SearchActivity" />
+
         <activity android:name=".addRestaurantActivity" />
+
+        <activity
+            android:name=".UploadActivity"
+            android:launchMode="singleTask"/>
+
+        <activity
+            android:name=".TestaddRestaurantActivity"
+            android:launchMode="singleTask"/>
+
+        <service
+            android:name=".MyDownloadService"
+            android:exported="false"/>
+
+        <service
+            android:name=".MyUploadService"
+            android:exported="false" />
     </application>
 
 </manifest>
