--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
     }
 }
 
+// Firebase Storage 用
 configurations.all {
     resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
 }
