--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.android.support:support-v4:27.1.1'
 
     // Android architecture components
@@ -42,11 +42,12 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1' //butter knife
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1' // butter knife
-    implementation 'com.github.bumptech.glide:glide:3.7.0' //import glide
+    implementation 'com.github.bumptech.glide:glide:4.4.0' //import glide
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1' //import Rating Bar
     implementation 'com.firebaseui:firebase-ui-auth:3.3.1'  // FireBaseUI (for authentication)
-    implementation 'com.google.firebase:firebase-storage:15.0.2'  //import FireStore
-    implementation 'com.google.firebase:firebase-firestore:16.0.0'  //import CloudStore
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'  //import FireStore
+    implementation 'com.google.firebase:firebase-firestore:17.0.1'  //import CloudStore
     implementation 'com.android.support:multidex:1.0.3' // to resolve "Cannot fit requested classes in a single dex file. Try supplying a main-dex list."
 
     implementation 'com.squareup.picasso:picasso:2.5.2' // use picasso to show picture from url
