--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.3.1'
+        classpath 'com.google.gms:google-services:4.0.0'
     }
 }
 
@@ -20,6 +20,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url "http://maven.google.com"
+        }
     }
 }
 
