--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.0'
     implementation 'com.google.firebase:firebase-storage:16.0.1'  //import FireStore
     implementation 'com.google.firebase:firebase-firestore:17.0.1'  //import CloudStore
-    implementation 'com.android.support:multidex:1.0.3' // to resolve "Cannot fit requested classes in a single dex file. Try supplying a main-dex list."
+    implementation 'com.google.firebase:firebase-database:16.0.1' //import Firebase Realtime Database
+    implementation 'com.android.support:multidex:1.0.3'
+    // to resolve "Cannot fit requested classes in a single dex file. Try supplying a main-dex list."
 
     implementation 'com.squareup.picasso:picasso:2.5.2' // use picasso to show picture from url
 
@@ -59,14 +61,15 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.1.0' // Circle Image View
 
-    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5' //Universal-Image-Loader
-
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //Universal-Image-Loader
 
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2' //for FireStorage
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    //for FireStorage
     androidTestImplementation 'com.android.support.test:rules:1.0.2' // for FireStorage
 
 }
