--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
@@ -57,6 +59,7 @@
         <activity android:name="tw.com.team13.Share.ShareActivity"></activity>
         <activity android:name="tw.com.team13.Explore.ExploreActivity"></activity>
         <activity android:name="tw.com.team13.Profile.AccountSettingsActivity" />
+        <activity android:name="tw.com.team13.Share.NextActivity" />
 
 
         <service
